Add more content

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -37,7 +37,7 @@
     <!-- ==================== NAVBAR ======================= -->
     <nav class="nav transparent z-depth-0 container" role="navigation">
       <div class="nav-wrapper">
-        <a id="logo-container" href="#" class="brand-logo right nav-sub"
+        <a id="logo-container" href="#" class="brand-logo right  profession"
           >John Pandas</a
         >
         <ul class="left hide-on-med-and-down">
@@ -57,11 +57,7 @@
 
         <!-- ============= SIDEBAR (MOBILE) ======================= -->
         <ul id="nav-mobile" class="sidenav sidebar">
-          <li><a href="#!">MENU</a></li>
-          <li>
-            <div class="divider"></div>
-          </li>
-          <li><a class="subheader">JOHN PANDAS</a></li>
+          <li class="amber center"><a href="#!" class="white-text">JOHN PANDAS</a></li>
           <li><a class="waves-effect" href="../index.html">Inicio</a></li>
           <li><a class="waves-effect" href="./formation.html">Educación</a></li>
           <li>
@@ -70,13 +66,13 @@
           <li><a class="waves-effect" href="./contact.html">Contacto</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"
-          ><i class="material-icons">menu</i></a
+          ><i class="material-icons amber-text">menu</i></a
         >
       </div>
     </nav>
 
     <main class="container">
-      <h3 class="center">EXPERIENCIA</h3>
+      <h3 class="center amber-text text-lighten-1">EXPERIENCIA</h3>
       <section class="container">
         <table>
           <thead>
@@ -103,7 +99,7 @@
                 <ul>
                   <li><span class="company"> Google </span></li>
                   <li>2018-2022</li>
-                  <li>4 año</li>
+                  <li>4 años</li>
                 </ul>
               </td>
             </tr>
@@ -148,25 +144,7 @@
               </td>
             </tr>
 
-            <tr>
-              <td>
-                <h6 class="work-title">Desarrollador Front</h6>
-              </td>
-              <td>
-                <ul>
-                  <li>Front-end</li>
-                  <li>HTML | CSS | JS</li>
-                  <li>Bootstrap | ReactJS</li>
-                </ul>
-              </td>
-              <td class="center">
-                <ul>
-                  <li><span class="company"> Google </span></li>
-                  <li>2015-2020</li>
-                  <li>5 años</li>
-                </ul>
-              </td>
-            </tr>
+            
           </tbody>
         </table>
       </section>
