--- a/pages/formation.html
+++ b/pages/formation.html
@@ -1,188 +1,314 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <!-- ==================== METAS ======================= -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <!-- ==================== METAS ======================= -->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
-  <!-- ==================== FAVICON ======================= -->
-  <link rel="icon" type="image/png" href="../images/ico/univ.png" />
+    <!-- ==================== FAVICON ======================= -->
+    <link rel="icon" type="image/png" href="../images/ico/univ.png" />
 
-  <!--======================== CSS ========================-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
-  <link rel="stylesheet" href="../css/contact.css">
-  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
-  
-  <!--===================== TITLE =========================-->
-  <title>Formación</title>
+    <!--======================== CSS ========================-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      href="../css/materialize.css"
+      type="text/css"
+      rel="stylesheet"
+      media="screen,projection"
+    />
+    <link rel="stylesheet" href="../css/contact.css" />
+    <link
+      href="../css/style.css"
+      type="text/css"
+      rel="stylesheet"
+      media="screen,projection"
+    />
 
-</head>
+    <!--===================== TITLE =========================-->
+    <title>Formación</title>
+  </head>
 
-<body>
-
-  <!-- ==================== NAVBAR ======================= -->
-  <nav class="nav transparent z-depth-0 container" role="navigation">
-    <div class="nav-wrapper">
-      <a id="logo-container" href="#" class="brand-logo right nav-sub">John Pandas</a>
-      <ul class="left hide-on-med-and-down">
-        <li><a class="waves-effect link" href="../index.html">Inicio</a></li>
-        <li><a class="waves-effect link" href="./formation.html">Educación</a></li>
-        <li>
-          <a class="waves-effect link" href="./experience.html">Experiencia</a>
-        </li>
-        <li><a class="waves-effect link" href="./contact.html">Contacto</a></li>
-      </ul>
-
-      <!-- ============= SIDEBAR (MOBILE) ======================= -->
-      <ul id="nav-mobile" class="sidenav sidebar">
-        <li><a href="#!">MENU</a></li>
-        <li>
-          <div class="divider"></div>
-        </li>
-        <li><a class="subheader">JOHN PANDAS</a></li>
-        <li><a class="waves-effect" href="../index.html">Inicio</a></li>
-        <li><a class="waves-effect" href="./formation.html">Educación</a></li>
-        <li><a class="waves-effect" href="./experience.html">Experiencia</a></li>
-        <li><a class="waves-effect " href="./contact.html">Contacto</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
-
-
-
-  <!-- =============== MAIN CONTENT ===================== -->
-  <main class="">
-    <div class="row center container">
-      <h3 class=" center">FORMACIÓN</h3>
-  </main>
-
-
-  <!-- ========== FLOATING BUTTON ======================= -->
-  <div class="oculto fixed-action-btn" id="floatbtn">
-    <a class="btn-floating btn-large blue lighten-1 pulse">
-      <i class="large material-icons">widgets</i>
-    </a>
-    <ul>
-      <li>
-        <a href="../index.html" class="btn-floating red"
-          ><i class="material-icons">face</i></a
+  <body>
+    <!-- ==================== NAVBAR ======================= -->
+    <nav class="nav transparent z-depth-0 container" role="navigation">
+      <div class="nav-wrapper">
+        <a id="logo-container" href="#" class="brand-logo right profession"
+          >John Pandas</a
         >
-      </li>
-      <li>
-        <a href="formation.html"   class="btn-floating yellow darken-1"
-          ><i class="material-icons">school</i></a
-        >
-      </li>
-      <li>
-        <a href="experience.html"  class="btn-floating green"><i class="material-icons">work</i></a>
-      </li>
-      <li>
-        <a href="contact.html" class="btn-floating blue"
-          ><i class="material-icons">mail</i></a
-        >
-      </li>
-    </ul>
-  </div>
-
-
-
-  <!-- =================== FOOTER ======================= -->
- <!-- ========== FLOATING BUTTON ======================= -->
- <div class="oculto fixed-action-btn" id="floatbtn">
-  <a class="btn-floating btn-large btn-float pulse">
-    <i class="large material-icons">widgets</i>
-  </a>
-  <ul>
-    <li>
-      <a href="../index.html" class="btn-floating red"
-        ><i class="material-icons">home</i></a
-      >
-    </li>
-    <li>
-      <a href="formation.html"   class="btn-floating yellow darken-1"
-        ><i class="material-icons">school</i></a
-      >
-    </li>
-    <li>
-      <a href="experience.html"  class="btn-floating green"><i class="material-icons">work</i></a>
-    </li>
-    <li>
-      <a href="contact.html" class="btn-floating blue"
-        ><i class="material-icons">mail</i></a
-      >
-    </li>
-  </ul>
-</div>
-
-
-<!-- =================== FOOTER ======================= -->
-<footer class="page-footer footer blue-grey darken-2">
-  <div class="container">
-    <div class="row">
-      <div class="col l6 s12">
-        <h5 class="white-text">John Pandas</h5>
-        <p class="grey-text text-lighten-4">
-          Gracias por interesarte en mi currículum. Cualquier consulta estoy
-          a disposición. ¡No dudes en contactarme en cualquiera de mis
-          métodos de contacto!
-        </p>
-      </div>
-      <div class="col l3 s6">
-        <h5 class="white-text">Navegación</h5>
-        <ul>
-          <li><a class="white-text" target="_blank" href="../index.html">Inicio</a></li>
-          <li><a class="white-text" target="_blank" href="./formation.html">Formación</a></li>
-          <li><a class="white-text" target="_blank" href="./experience.html">Experiencia</a></li>
-          <li><a class="white-text" target="_blank" href="./contact.html">Contacto</a></li>
+        <ul class="left hide-on-med-and-down">
+          <li><a class="waves-effect link" href="../index.html">Inicio</a></li>
+          <li>
+            <a class="waves-effect link" href="./formation.html">Educación</a>
+          </li>
+          <li>
+            <a class="waves-effect link" href="./experience.html"
+              >Experiencia</a
+            >
+          </li>
+          <li>
+            <a class="waves-effect link" href="./contact.html">Contacto</a>
+          </li>
         </ul>
-      </div>
-      <div class="col l3 s6">
-        <h5 class="white-text">Conectemos</h5>
-        <ul>
-          <li><a class="white-text" href="tel:XXX-XXX-XXXX">Teléfono</a></li>
-          <li><a class="white-text" href="#mailme">Mail</a></li>
-          <li><a class="white-text" href="https://wa.me/+1100000000">whatsapp</a></li>
-          <li><a class="white-text" href="https://twitter.com/search?q=develop&src=typed_query&f=top" target="_blank">Twitter</a></li>
+
+        <!-- ============= SIDEBAR (MOBILE) ======================= -->
+        <ul id="nav-mobile" class="sidenav sidebar">
+          <li><a href="#!">MENU</a></li>
+          <li>
+            <div class="divider"></div>
+          </li>
+          <li><a class="subheader">JOHN PANDAS</a></li>
+          <li><a class="waves-effect" href="../index.html">Inicio</a></li>
+          <li><a class="waves-effect" href="./formation.html">Educación</a></li>
+          <li>
+            <a class="waves-effect" href="./experience.html">Experiencia</a>
+          </li>
+          <li><a class="waves-effect" href="./contact.html">Contacto</a></li>
         </ul>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
       </div>
-    </div>
-  </div>
-  <div class="footer-copyright center">
-    <div class="container center">
-      Powered by 
-      <a class="pink-text text-lighten-1" href="http://materializecss.com"
-        >Materialize
+    </nav>
+
+    <!-- =============== MAIN CONTENT ===================== -->
+    <main class="">
+      <div class="row center container">
+        <h3 class="center amber-text text-lighten-1">FORMACIÓN</h3>
+      </div>
+
+      <section class="container">
+
+        <div class="divider"></div>
+        <div class="section formal-section">
+          <h5 class="center">Formal</h5>
+          <div class="row container">
+            <div class="col s6">
+              <ul class="center formal">
+                <li class="title-name"> <b>Analísta Programador</b></li>
+                <li>UNLPam</li>
+                <li>2019-2023</li>
+              </ul>
+            </div>
+            <div class="col s6">
+              <ul class="center formal">
+                <li class="title-name"><b>Técnico Logístico</b></li>
+                <li class="place">UNLa</li>
+                <li>2015-2019</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="divider"></div>
+        <div class="section cursos">
+          <h5 class="center">Cursos</h5>
+          <div class="row container cursos-container">
+
+            <div class="col s4">
+              <ul class="center curso">
+                <li class="title-name">Front-End Avanzado</li>
+                <li>2020</li>
+              </ul>
+            </div>
+            <div class="col s4">
+              <ul class="center curso">
+                <li class="title-name">SQL y NoSQL</li>
+                <li>2018</li>
+              </ul>
+            </div>
+            <div class="col s4">
+              <ul class="center curso">
+                <li class="title-name">Python fullstack</li>
+                <li>2016</li>
+              </ul>
+            </div>
+          </div>
+          <div class="row container">
+            <div class="col s4">
+              <ul class="center curso">
+                <li class="title-name">Supply Chain</li>
+                <li>2015</li>
+              </ul>
+            </div>
+            <div class="col s4">
+              <ul class="center curso">
+                <li class="title-name">Logistica 4.0</li>
+                <li>2014</li>
+              </ul>
+            </div>
+            <div class="col s4">
+              <ul class="center curso">
+                <li class="title-name">Algoritmos y lógica</li>
+                <li>2013</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+    </main>
+
+    <!-- ========== FLOATING BUTTON ======================= -->
+    <div class="oculto fixed-action-btn" id="floatbtn">
+      <a class="btn-floating btn-large blue lighten-1 pulse">
+        <i class="large material-icons">widgets</i>
       </a>
+      <ul>
+        <li>
+          <a href="../index.html" class="btn-floating red"
+            ><i class="material-icons">face</i></a
+          >
+        </li>
+        <li>
+          <a href="formation.html" class="btn-floating yellow darken-1"
+            ><i class="material-icons">school</i></a
+          >
+        </li>
+        <li>
+          <a href="experience.html" class="btn-floating green"
+            ><i class="material-icons">work</i></a
+          >
+        </li>
+        <li>
+          <a href="contact.html" class="btn-floating blue"
+            ><i class="material-icons">mail</i></a
+          >
+        </li>
+      </ul>
     </div>
-  </div>
-  <div class="footer-copyright center">
-    <div class="container center">
-      Design by
-      <a class="blue-text text-darken-2" href=""
-        >J.P. Esparza</a
-      >
-    </div>
-  </div>
-  <div class="footer-copyright center">
-    <div class="container center">
-      <p class="amber-text text-daken-2">Repo del proyecto</p>
-      <a class="" href="https://github.com/Jesparzarom/CurriculumWeb" target="_blank"
-        ><img src="../images/ico/github.png" width="100px" alt="" class="ghrepo"></a
-      >
-    </div>
-  </div>
-</footer>
 
-<!--SCRIPTS-->
-<!--#region-->
-<script type="text/javascript"  src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script type="text/javascript" src="../js/materialize.js"></script>
-<script type="text/javascript" src="../js/init.js"></script>
-<script type="text/javascript" src="../js/form.js"></script>
-<!--#endregion-->
-</body>
+    <!-- =================== FOOTER ======================= -->
+    <!-- ========== FLOATING BUTTON ======================= -->
+    <div class="oculto fixed-action-btn" id="floatbtn">
+      <a class="btn-floating btn-large btn-float pulse">
+        <i class="large material-icons">widgets</i>
+      </a>
+      <ul>
+        <li>
+          <a href="../index.html" class="btn-floating red"
+            ><i class="material-icons">home</i></a
+          >
+        </li>
+        <li>
+          <a href="formation.html" class="btn-floating yellow darken-1"
+            ><i class="material-icons">school</i></a
+          >
+        </li>
+        <li>
+          <a href="experience.html" class="btn-floating green"
+            ><i class="material-icons">work</i></a
+          >
+        </li>
+        <li>
+          <a href="contact.html" class="btn-floating blue"
+            ><i class="material-icons">mail</i></a
+          >
+        </li>
+      </ul>
+    </div>
 
+    <!-- =================== FOOTER ======================= -->
+    <footer class="page-footer footer blue-grey darken-2">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">John Pandas</h5>
+            <p class="grey-text text-lighten-4">
+              Gracias por interesarte en mi currículum. Cualquier consulta estoy
+              a disposición. ¡No dudes en contactarme en cualquiera de mis
+              métodos de contacto!
+            </p>
+          </div>
+          <div class="col l3 s6">
+            <h5 class="white-text">Navegación</h5>
+            <ul>
+              <li>
+                <a class="white-text" target="_blank" href="../index.html"
+                  >Inicio</a
+                >
+              </li>
+              <li>
+                <a class="white-text" target="_blank" href="./formation.html"
+                  >Formación</a
+                >
+              </li>
+              <li>
+                <a class="white-text" target="_blank" href="./experience.html"
+                  >Experiencia</a
+                >
+              </li>
+              <li>
+                <a class="white-text" target="_blank" href="./contact.html"
+                  >Contacto</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col l3 s6">
+            <h5 class="white-text">Conectemos</h5>
+            <ul>
+              <li>
+                <a class="white-text" href="tel:XXX-XXX-XXXX">Teléfono</a>
+              </li>
+              <li><a class="white-text" href="#mailme">Mail</a></li>
+              <li>
+                <a class="white-text" href="https://wa.me/+1100000000"
+                  >whatsapp</a
+                >
+              </li>
+              <li>
+                <a
+                  class="white-text"
+                  href="https://twitter.com/search?q=develop&src=typed_query&f=top"
+                  target="_blank"
+                  >Twitter</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright center">
+        <div class="container center">
+          Powered by
+          <a class="pink-text text-lighten-1" href="http://materializecss.com"
+            >Materialize
+          </a>
+        </div>
+      </div>
+      <div class="footer-copyright center">
+        <div class="container center">
+          Design by
+          <a class="blue-text text-darken-2" href="">J.P. Esparza</a>
+        </div>
+      </div>
+      <div class="footer-copyright center">
+        <div class="container center">
+          <p class="amber-text text-daken-2">Repo del proyecto</p>
+          <a
+            class=""
+            href="https://github.com/Jesparzarom/CurriculumWeb"
+            target="_blank"
+            ><img
+              src="../images/ico/github.png"
+              width="100px"
+              alt=""
+              class="ghrepo"
+          /></a>
+        </div>
+      </div>
+    </footer>
+
+    <!--SCRIPTS-->
+    <!--#region-->
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-2.1.1.min.js"
+    ></script>
+    <script type="text/javascript" src="../js/materialize.js"></script>
+    <script type="text/javascript" src="../js/init.js"></script>
+    <script type="text/javascript" src="../js/form.js"></script>
+    <!--#endregion-->
+  </body>
 </html>
