--- a/index.html
+++ b/index.html
@@ -60,25 +60,18 @@
           </li>
         </ul>
 
+        <!-- ============= SIDEBAR (MOBILE) ======================= -->
         <ul id="nav-mobile" class="sidenav sidebar">
-          <li><a href="#!">MENU</a></li>
-          <li><div class="divider"></div></li>
-          <li><a class="subheader">JOHN PANDAS</a></li>
+          <li class="amber center"><a href="#!" class="white-text">JOHN PANDAS</a></li>
           <li><a class="waves-effect" href="./index.html">Inicio</a></li>
+          <li><a class="waves-effect" href="./pages/formation.html">Educación</a></li>
           <li>
-            <a class="waves-effect" href="./pages/formation.html">Educación</a>
+            <a class="waves-effect" href="./pages/experience.html">Experiencia</a>
           </li>
-          <li>
-            <a class="waves-effect" href="./pages/experience.html"
-              >Experiencia</a
-            >
-          </li>
-          <li>
-            <a class="waves-effect" href="./pages/contact.html">Contacto</a>
-          </li>
+          <li><a class="waves-effect" href="./pages/contact.html">Contacto</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"
-          ><i class="material-icons">menu</i></a
+          ><i class="material-icons amber-text">menu</i></a
         >
       </div>
     </nav>
@@ -137,7 +130,7 @@
               </h2>
               <h5 class="center">User Experience Focused</h5>
 
-              <p class="light">
+              <p class="">
                 By utilizing elements and principles of Material Design, we were
                 able to create a framework that incorporates components and
                 animations that provide more feedback to users. Additionally, a
@@ -154,7 +147,7 @@
               </h2>
               <h5 class="center">Easy to work with</h5>
 
-              <p class="light">
+              <p class="">
                 We have provided detailed documentation as well as specific code
                 examples to help new users get started. We are also always open
                 to feedback and can answer any questions a user may have about
@@ -176,7 +169,7 @@
               </h2>
               <h5 class="center">Speeds up development</h5>
 
-              <p class="light">
+              <p class="">
                 We did most of the heavy lifting for you to provide a default
                 stylings that incorporate our custom components. Additionally,
                 we refined animations and transitions to provide a smoother
@@ -192,7 +185,7 @@
               </h2>
               <h5 class="center">User Experience Focused</h5>
 
-              <p class="light">
+              <p class="">
                 By utilizing elements and principles of Material Design, we were
                 able to create a framework that incorporates components and
                 animations that provide more feedback to users. Additionally, a
@@ -209,7 +202,7 @@
               </h2>
               <h5 class="center">Easy to work with</h5>
 
-              <p class="light">
+              <p class="">
                 We have provided detailed documentation as well as specific code
                 examples to help new users get started. We are also always open
                 to feedback and can answer any questions a user may have about
