--- a/pages/contact.html
+++ b/pages/contact.html
@@ -43,23 +43,19 @@
         </li>
       </ul>
 
-      <!-- ============= SIDEBAR (MOBILE) ======================= -->
-      <ul id="nav-mobile" class="sidenav sidebar">
-        <li><a href="#!">MENU</a></li>
-        <li>
-          <div class="divider"></div>
-        </li>
-        <li><a class="subheader">JOHN PANDAS</a></li>
-        <li><a class="waves-effect" href="../index.html">Inicio</a></li>
-        <li><a class="waves-effect" href="./formation.html">Educación</a></li>
-        <li>
-          <a class="waves-effect" href="./experience.html">Experiencia</a>
-        </li>
-        <li><a class="waves-effect" href="./contact.html">Contacto</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"
-        ><i class="material-icons">menu</i></a
-      >
+         <!-- ============= SIDEBAR (MOBILE) ======================= -->
+         <ul id="nav-mobile" class="sidenav sidebar">
+          <li class="amber center"><a href="#!" class="white-text">JOHN PANDAS</a></li>
+          <li><a class="waves-effect" href="../index.html">Inicio</a></li>
+          <li><a class="waves-effect" href="./formation.html">Educación</a></li>
+          <li>
+            <a class="waves-effect" href="./experience.html">Experiencia</a>
+          </li>
+          <li><a class="waves-effect" href="./contact.html">Contacto</a></li>
+        </ul>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"
+          ><i class="material-icons amber-text">menu</i></a
+        >
     </div>
   </nav>
 
@@ -67,12 +63,12 @@
 
   <!-- =============== MAIN CONTENT ===================== -->
   <main class="">
-    <div class="row center container">
-      <h3 class=" center">CONTACTO</h3>
+    <div class="row center container z-depth-0">
+      <h3 class=" center amber-text text-lighten-1">CONTACTO</h3>
 
       <!------------------ CONTACT LINKS ---------------------->
       <div class="col l12 m12 s12 center center-align container">
-          <div class="center container">
+          <div class="center container ">
             <div class="row center other-contact">
 
               <div class="col s3 m3">
@@ -107,11 +103,11 @@
 
       <!------------------ CONTACT FORM ---------------------->
       <div class="container col l12 m12 s12 card-form center">
-        <h6 class="center">FORMULARIO</h6>
         <div class="center other-contact container">
 
-          <form class="col s12" id="form">
+          <form class="col s12 transparent z-depth-0" id="form">
             <div class="row">
+              <div>&nbsp;</div>
               <div class="input-field col s12 m6">
                 <i class="material-icons prefix">person</i>
                 <input id="first_name" type="text" class="validate" />
