Add more content/Fix paths/Fix colors

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <!--========================== META =========================-->
     <meta charset="utf-8" />
@@ -35,7 +35,11 @@
     />
   </head>
 
+
   <body>
+    <!-- =============================================================
+      ====================== HEADER SECTION ======================== -->
+     <!-- NAVBAR --> 
     <nav class="nav container transparent z-depth-0" role="navigation">
       <div class="nav-wrapper">
         <a id="logo-container" href="#" class="brand-logo right profession"
@@ -60,9 +64,9 @@
           </li>
         </ul>
 
-        <!-- ============= SIDEBAR (MOBILE) ======================= -->
+        <!-- SIDEBAR (MOBILE)= -->
         <ul id="nav-mobile" class="sidenav sidebar">
-          <li class="amber center"><a href="#!" class="white-text">JOHN PANDAS</a></li>
+          <li class="amber accent-1 center z-depth-2"><a href="#!" class="white-text"><b>JOHN PANDAS</b></a></li>
           <li><a class="waves-effect" href="./index.html">Inicio</a></li>
           <li><a class="waves-effect" href="./pages/formation.html">Educación</a></li>
           <li>
@@ -76,6 +80,7 @@
       </div>
     </nav>
 
+    <!-- HERO (PIC AND NAME) -->
     <hero class="hero center">
       <div class="pic-containter center" id="logo-container">
         <img
@@ -100,19 +105,22 @@
       </div>
     </hero>
 
+    <!-- =============================================================
+    ======================== MAIN CONTENT ============================ -->
     <main class="center">
-      <!--   SECCIÓN SOBRE MI  -->
+
+      <!-- MI SECTION -->
       <section class="section section-about border white z-depth-2">
         <div class="row container">
           <div class="col s12 m12">
             <div class="icon-block">
-              <h2 class="center teal-text text-lighten-1">
+              <h2 class="center amber-text text-accent-1">
                 <i class="material-icons">badge</i>
               </h2>
               <h5 class="center">Sobre mí</h5>
 
               <p class="about-text">
-                Me encanta trabajar en proyectos desafiantes que me permitan
+                ¡Hola! soy <span class="amber-text text-accent-2">John</span> y tengo 35 años. Me encanta trabajar en proyectos desafiantes que me permitan
                 explorar nuevas tecnologías y solucionar problemas complejos de
                 manera eficiente. Además, disfruto colaborando con otros
                 desarrolladores para crear soluciones innovadoras que puedan
@@ -125,7 +133,7 @@
 
           <div class="col s12 m6">
             <div class="icon-block">
-              <h2 class="center teal-text text-lighten-1">
+              <h2 class="center amber-text text-accent-1">
                 <i class="material-icons">group</i>
               </h2>
               <h5 class="center">User Experience Focused</h5>
@@ -142,7 +150,7 @@
 
           <div class="col s12 m6">
             <div class="icon-block">
-              <h2 class="center teal-text text-lighten-1">
+              <h2 class="center amber-text text-accent-1">
                 <i class="material-icons">settings</i>
               </h2>
               <h5 class="center">Easy to work with</h5>
@@ -158,13 +166,12 @@
         </div>
       </section>
 
-      <!--   SECCIÓN EDUCACIÓN Y EXPERIENCIA -->
+      <!--  EDUCACIÓN Y EXPERIENCIA -->
       <section class="border container">
-        <!--   Icon Section   -->
         <div class="row">
           <div class="col s12 m12">
             <div class="icon-block">
-              <h2 class="center light-blue-text">
+              <h2 class="center green-text text-lighten-3">
                 <i class="material-icons">badge</i>
               </h2>
               <h5 class="center">Speeds up development</h5>
@@ -180,7 +187,7 @@
 
           <div class="col s12 m6">
             <div class="icon-block">
-              <h2 class="center light-blue-text">
+              <h2 class="center light-blue-text text-lighten-3">
                 <i class="material-icons">group</i>
               </h2>
               <h5 class="center">User Experience Focused</h5>
@@ -197,7 +204,7 @@
 
           <div class="col s12 m6">
             <div class="icon-block">
-              <h2 class="center light-blue-text">
+              <h2 class="center red-text text-lighten-3">
                 <i class="material-icons">settings</i>
               </h2>
               <h5 class="center">Easy to work with</h5>
@@ -217,6 +224,8 @@
       <section class="section z-depth-2">adfsgdfhjmj,k</section>
     </main>
 
+    <!--===================================================
+      ===================== FOOTER =====================-->
     <footer class="page-footer footer blue-grey darken-2">
       <div class="container">
         <div class="row">
@@ -274,6 +283,9 @@
       </div>
     </footer>
 
+
+    <!--===================================================
+    ================ FIXED ACTIONS BUTTON ================-->
     <div class="oculto fixed-action-btn" id="floatbtn">
       <a class="btn-floating btn-large pulse btn-float">
         <i class="large material-icons">widgets</i>
@@ -295,16 +307,18 @@
           >
         </li>
         <li>
-          <a href="/pages/contact.html" class="btn-floating blue"
+          <a href="./pages/contact.html" class="btn-floating blue"
             ><i class="material-icons">mail</i></a
           >
         </li>
       </ul>
     </div>
 
-    <!--  Scripts-->
+      <!--===================================================
+      ===================== SCRIPTS =====================-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
+
   </body>
 </html>
