--- a/pages/contact.html
+++ b/pages/contact.html
@@ -45,7 +45,7 @@
 
          <!-- ============= SIDEBAR (MOBILE) ======================= -->
          <ul id="nav-mobile" class="sidenav sidebar">
-          <li class="amber center"><a href="#!" class="white-text">JOHN PANDAS</a></li>
+          <li class="amber accent-2 center z-depth-2"><a href="#!" class="white-text"><b>JOHN PANDAS</b></a></li>
           <li><a class="waves-effect" href="../index.html">Inicio</a></li>
           <li><a class="waves-effect" href="./formation.html">Educación</a></li>
           <li>
@@ -54,7 +54,7 @@
           <li><a class="waves-effect" href="./contact.html">Contacto</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"
-          ><i class="material-icons amber-text">menu</i></a
+          ><i class="material-icons amber-text text-accent-2">menu</i></a
         >
     </div>
   </nav>
@@ -64,7 +64,7 @@
   <!-- =============== MAIN CONTENT ===================== -->
   <main class="">
     <div class="row center container z-depth-0">
-      <h3 class=" center amber-text text-lighten-1">CONTACTO</h3>
+      <h3 class=" center amber-text text-accent-2">CONTACTO</h3>
 
       <!------------------ CONTACT LINKS ---------------------->
       <div class="col l12 m12 s12 center center-align container">
@@ -138,7 +138,7 @@
 
           <div class="card-action center">
             <a 
-            class="btn center waves-effect hoverable btn-large center" 
+            class="btn center waves-effect hoverable center" 
             id="enviar-form">
             Enviar mensaje
           </a>
