--- a/pages/experience.html
+++ b/pages/experience.html
@@ -57,7 +57,7 @@
 
         <!-- ============= SIDEBAR (MOBILE) ======================= -->
         <ul id="nav-mobile" class="sidenav sidebar">
-          <li class="amber center"><a href="#!" class="white-text">JOHN PANDAS</a></li>
+          <li class="amber accent-2 center z-depth-2"><a href="#!" class="white-text"><b>JOHN PANDAS</b></a></li>
           <li><a class="waves-effect" href="../index.html">Inicio</a></li>
           <li><a class="waves-effect" href="./formation.html">Educación</a></li>
           <li>
@@ -66,13 +66,13 @@
           <li><a class="waves-effect" href="./contact.html">Contacto</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"
-          ><i class="material-icons amber-text">menu</i></a
+          ><i class="material-icons amber-text text-accent-2">menu</i></a
         >
       </div>
     </nav>
 
     <main class="container">
-      <h3 class="center amber-text text-lighten-1">EXPERIENCIA</h3>
+      <h3 class="center amber-text text-accent-2">EXPERIENCIA</h3>
       <section class="container">
         <table>
           <thead>
