--- a/pages/formation.html
+++ b/pages/formation.html
@@ -19,14 +19,13 @@
       rel="stylesheet"
       media="screen,projection"
     />
-    <link rel="stylesheet" href="../css/contact.css" />
     <link
-      href="../css/style.css"
-      type="text/css"
-      rel="stylesheet"
-      media="screen,projection"
-    />
-
+    href="../css/style.css"
+    type="text/css"
+    rel="stylesheet"
+    media="screen,projection"
+  />
+    <link rel="stylesheet" href="../css/contact.css" />
     <!--===================== TITLE =========================-->
     <title>Formación</title>
   </head>
@@ -55,11 +54,7 @@
 
         <!-- ============= SIDEBAR (MOBILE) ======================= -->
         <ul id="nav-mobile" class="sidenav sidebar">
-          <li><a href="#!">MENU</a></li>
-          <li>
-            <div class="divider"></div>
-          </li>
-          <li><a class="subheader">JOHN PANDAS</a></li>
+          <li class="amber accent-2 center z-depth-2"><a href="#!" class="white-text"><b>JOHN PANDAS</b></a></li>
           <li><a class="waves-effect" href="../index.html">Inicio</a></li>
           <li><a class="waves-effect" href="./formation.html">Educación</a></li>
           <li>
@@ -68,7 +63,7 @@
           <li><a class="waves-effect" href="./contact.html">Contacto</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"
-          ><i class="material-icons">menu</i></a
+          ><i class="material-icons amber-text text-accent-2">menu</i></a
         >
       </div>
     </nav>
@@ -87,7 +82,7 @@
           <div class="row container">
             <div class="col s6">
               <ul class="center formal">
-                <li class="title-name"> <b>Analísta Programador</b></li>
+                <li class="title-name"> <b>Analista Programador</b></li>
                 <li>UNLPam</li>
                 <li>2019-2023</li>
               </ul>
@@ -149,36 +144,7 @@
         </div>
     </main>
 
-    <!-- ========== FLOATING BUTTON ======================= -->
-    <div class="oculto fixed-action-btn" id="floatbtn">
-      <a class="btn-floating btn-large blue lighten-1 pulse">
-        <i class="large material-icons">widgets</i>
-      </a>
-      <ul>
-        <li>
-          <a href="../index.html" class="btn-floating red"
-            ><i class="material-icons">face</i></a
-          >
-        </li>
-        <li>
-          <a href="formation.html" class="btn-floating yellow darken-1"
-            ><i class="material-icons">school</i></a
-          >
-        </li>
-        <li>
-          <a href="experience.html" class="btn-floating green"
-            ><i class="material-icons">work</i></a
-          >
-        </li>
-        <li>
-          <a href="contact.html" class="btn-floating blue"
-            ><i class="material-icons">mail</i></a
-          >
-        </li>
-      </ul>
-    </div>
 
-    <!-- =================== FOOTER ======================= -->
     <!-- ========== FLOATING BUTTON ======================= -->
     <div class="oculto fixed-action-btn" id="floatbtn">
       <a class="btn-floating btn-large btn-float pulse">
@@ -191,17 +157,17 @@
           >
         </li>
         <li>
-          <a href="formation.html" class="btn-floating yellow darken-1"
+          <a href="./formation.html" class="btn-floating yellow darken-1"
             ><i class="material-icons">school</i></a
           >
         </li>
         <li>
-          <a href="experience.html" class="btn-floating green"
+          <a href="./experience.html" class="btn-floating green"
             ><i class="material-icons">work</i></a
           >
         </li>
         <li>
-          <a href="contact.html" class="btn-floating blue"
+          <a href="./contact.html" class="btn-floating blue"
             ><i class="material-icons">mail</i></a
           >
         </li>
@@ -218,6 +184,10 @@
               Gracias por interesarte en mi currículum. Cualquier consulta estoy
               a disposición. ¡No dudes en contactarme en cualquiera de mis
               métodos de contacto!
+            </p>
+            <p class="grey-text text-lighten-4 light">
+              Lomas de Zamora, Gran Buenos Aires,
+              cp1834
             </p>
           </div>
           <div class="col l3 s6">
